--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngui/datetime-picker": "^0.16.2",
     "@types/underscore": "^1.8.3",
     "angular2-material-datepicker": "^0.5.0",
     "core-js": "^2.4.1",
