--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngui/datetime-picker": "^0.16.2",
     "@types/underscore": "^1.8.3",
     "angular2-material-datepicker": "^0.5.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-datepicker": "^1.8.3",
     "ng2-owl-carousel": "^0.1.15",
     "ng2-page-scroll": "^4.0.0-beta.11",
     "ng2-page-slider": "^0.10.1",
